# NearYou

./: .coverage  .env  .gitignore  .gitpod.yml  .pre-commit-config.yaml  Makefile  README.md  coverage.json  demo_design_patterns.py  docker-compose.yml  pyproject.toml  pytest.ini  quality_metrics_analyzer.py  readme.md  requirements-dev.txt  requirements.txt  test_dashboard_data.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.md  maintenance.md
.github/workflows/: cd-production.yml  cd-staging.yml  ci.yml
airflow/dags/: etl_shops.py
config/development/: .env.development
deployment/docker/: Dockerfile  docker-compose.yml
deployment/scripts/: init_clickhouse.sh  init_etl_tables.sql  init_postgres.sh
docker/: docker-compose.dev.yml
docker/services/app/: Dockerfile.dev
docker/services/dashboard/: Dockerfile.dev
docker/services/message-generator/: Dockerfile.dev
docker/services/osrm/: Dockerfile.dev
grafana/provisioning/dashboards/: nearyou_dashboard.json
monitoring/: docker-compose.monitoring.yml
monitoring/prometheus/: prometheus.yml
requirements/: dev.txt
scripts/: init_osrm.sh  verify_db.sh
scripts/setup/: check_health.sh  generate_dev_certificates.sh  init_airflow.sh  init_databases.sh  init_project.sh  wait_for_services.sh
services/dashboard/: main_user.py
services/message_generator/: app.py  cache_utils.py
src/: configg.py
src/cache/: __init__.py
src/config/: offers_config.py
src/data_pipeline/: bytewax_flow.py  generate_sample_visits.py  generate_users.py  operators.py  producer.py
src/models/: offer.py
src/services/: offers_service.py
src/utils/: logger_config.py
tests/: conftest.py  requirements-test.txt  run_tests.sh
tests/integration/: test_dashboard_api.py  test_data_pipeline.py
tests/system/: run_system_tests.sh  test_requirements_desirable.py  test_requirements_functional.py  test_requirements_nonfunctional.py  test_requirements_rf4_rf7.py  test_system_configuration.py
tests/unit/: test_cache.py  test_models.py  test_offers_service.py
(+16 files in other folders)
